NOTICK: Allow reflective access to selected java.base packages in Java 11.